examples/test/testpolicy5716.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5716
  namespace: namespace294
spec:
  podSelector:
    matchLabels:
      key16: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value22
          key13: value29
          key4: value2
      podSelector:
        matchLabels:
          key2: value30
